eks/frontend/overlays/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faucet-ingress
  labels:
    app: faucet-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-dns"
spec:
  tls:
    - hosts:
      - faucet-testnet.aws.alephzero.org
      secretName: faucet-frontend-testnet
  rules:
    - host: faucet-testnet.aws.alephzero.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faucet-frontend
                port: 
                  number: 5556
